[package]
name = "cev-metrics"
version = "0.1.2"
edition = "2021"

[lib]
name = "cev_metrics"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
delaunator = "1.0.2"
numpy = "0.21"
petgraph = "0.6.3"
pyo3 = { version = "0.21", features = ["extension-module"] }
rayon = "1.7.0"
