[package]
name = "cev-metrics"
version = "0.1.6"
edition = "2021"

[lib]
name = "cev_metrics"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
delaunator = { git = "https://github.com/manzt/delaunator-rs.git", rev = "c0e718b" }
numpy = "0.28"
petgraph = "0.6.3"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
rayon = "1.7.0"
