[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "cev-metrics"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Trevor Manz", email = "trevor.j.manz@gmail.com" }]
dependencies = ["numpy>=2.0.0"]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.2.2",
    "jupyterlab-vim>=4.1.3",
    "pip>=24.0",
    "pandas>=2.2.2",
    "pyarrow>=16.1.0",
    "fastparquet>=2024.5.0",
]

[tool.rye.scripts]
bench = "python bench/run.py"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
